--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "homebridge-energy-price",
 	"version": "1.0.0",
 	"description": "Monitors the ComEd energy price for use in automations",
-	"author": "John2691",
+	"author": "john2691",
 	"license": "MIT",
 	"main": "index.js",
 	"keywords": [
