--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 	},
 	"devDependencies": {},
 	"engines": {
-		"homebridge": ">=2.0.0",
-		"node": ">=18.0.0"
+		"homebridge": "^2.0.0-beta.0",
+		"node": "^20.15.1"
 	},
 	"publishConfig": {
 		"tag": "beta"
